[gd_scene load_steps=6 format=3 uid="uid://bowecg0tsch7g"]

[ext_resource type="Texture2D" uid="uid://cptbsvxa5ga0v" path="res://assets/back.png" id="1_eu56g"]
[ext_resource type="Script" path="res://ui/hud/hud.gd" id="1_whjl4"]
[ext_resource type="PackedScene" uid="uid://bb8p574m0by1r" path="res://ui/objects/levels_counter/levels_counter.tscn" id="3_dwl04"]
[ext_resource type="Texture2D" uid="uid://d2ljx8om5qvj7" path="res://assets/sprite/coin0.png" id="3_ty5l1"]
[ext_resource type="PackedScene" uid="uid://b4lu3y3clbdlw" path="res://ui/objects/projectiles_counter/projectiles_counter.tscn" id="5_8atni"]

[node name="HUD" type="CanvasLayer"]
layer = 2
script = ExtResource("1_whjl4")

[node name="BackgroundCanvas" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundTexture" type="TextureRect" parent="BackgroundCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_eu56g")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 256

[node name="RootVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="UpHBoxContainer" type="HBoxContainer" parent="MarginContainer/RootVBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/RootVBoxContainer/UpHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "< Back"
flat = true
alignment = 0

[node name="ScoreLable" type="Label" parent="MarginContainer/RootVBoxContainer/UpHBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="LevelsCounter" parent="MarginContainer/RootVBoxContainer/UpHBoxContainer" instance=ExtResource("3_dwl04")]
unique_name_in_owner = true
layout_mode = 2

[node name="CoinsCounter" type="HBoxContainer" parent="MarginContainer/RootVBoxContainer/UpHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16
alignment = 2

[node name="CoinLable" type="Label" parent="MarginContainer/RootVBoxContainer/UpHBoxContainer/CoinsCounter"]
layout_mode = 2
size_flags_horizontal = 3
text = "0
"
horizontal_alignment = 2

[node name="CoinTexture" type="TextureRect" parent="MarginContainer/RootVBoxContainer/UpHBoxContainer/CoinsCounter"]
layout_mode = 2
texture = ExtResource("3_ty5l1")
stretch_mode = 5

[node name="StageLabel" type="Label" parent="MarginContainer/RootVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Stage 1"
horizontal_alignment = 1

[node name="ProjectileCounterHBoxContainer" type="HBoxContainer" parent="MarginContainer/RootVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 2

[node name="ProjectilesCounter" parent="MarginContainer/RootVBoxContainer/ProjectileCounterHBoxContainer" instance=ExtResource("5_8atni")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/RootVBoxContainer/UpHBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
